Migrating BulksaleV1 template from the previous repo

--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "abitype": "^0.8.1",
+    "date-fns": "^2.30.0",
     "dotenv-cli": "^7.2.1",
     "ethers": "^5",
     "formik": "^2.2.9",
     "framer-motion": "^6",
     "jotai": "^2.0.4",
-    "moment": "^2.29.4",
     "react-icons": "^4.8.0",
     "rsuite": "^5.33.0",
     "use-debounce": "^9.0.4",
