Styling Countdown UI, update build setting

--- a/turbo.json
+++ b/turbo.json
@@ -1,9 +1,13 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "globalDependencies": ["**/.env.*local"],
+  "globalDependencies": ["**/.env.*local", ".env"],
   "pipeline": {
     "build": {
-      "outputs": [".next/**", "!.next/cache/**"]
+      "outputs": [".next/**", "!.next/cache/**"],
+      "env": [
+        "NEXT_PUBLIC_TOKEN_ADDRESS",
+        "NEXT_PUBLIC_FACTORY_ADDRESS"
+      ]
     },
     "lint": {},
     "dev": {
