Added Big.js, replaced some logic with Big.js, updated sale creation form

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@chakra-ui/theme-tools": "^2.0.16",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@types/big.js": "^6.1.6",
     "abitype": "^0.8.1",
+    "big.js": "^6.2.1",
     "date-fns": "^2.30.0",
     "dotenv-cli": "^7.2.1",
     "ethers": "^5",
