Added SIWE and basic logic

--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "ethers": "^5",
     "formik": "^2.2.9",
     "framer-motion": "^6",
+    "iron-session": "^6.3.1",
     "jotai": "^2.0.4",
     "react-icons": "^4.8.0",
     "rsuite": "^5.33.0",
+    "siwe": "^2.1.4",
     "use-debounce": "^9.0.4",
     "wagmi": "^0.12.12"
   }
