--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "packageManager": "pnpm@7.15.0",
   "name": "bulk-auction-interface",
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.329.0",
     "@chakra-ui/icons": "^2.0.19",
     "@chakra-ui/react": "^2.6.0",
     "@chakra-ui/theme-tools": "^2.0.16",
@@ -36,6 +37,7 @@
     "react-icons": "^4.8.0",
     "rsuite": "^5.33.0",
     "siwe": "^2.1.4",
+    "swr": "^2.1.5",
     "use-debounce": "^9.0.4",
     "wagmi": "^0.12.12"
   }
