--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,6 @@
 NEXT_PUBLIC_FACTORY_ADDRESS=
-NEXT_PUBLIC_TOKEN_ADDRESS=
+NEXT_PUBLIC_SUBGRAPH_VERSION=
+NEXT_PUBLIC_CHAIN_ID=
 BASIC_AUTH_USER=
 BASIC_AUTH_PASS=
 IRON_SESSION_PASSWORD=
