Add WalletConnect projectId to .env

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,8 @@
 NEXT_PUBLIC_FACTORY_ADDRESS=
+NEXT_PUBLIC_SUBGRAPH_SLUG=
 NEXT_PUBLIC_SUBGRAPH_VERSION=
 NEXT_PUBLIC_CHAIN_ID=
+NEXT_PUBLIC_WALLET_CONNECT_ID=
 BASIC_AUTH_USER=
 BASIC_AUTH_PASS=
 IRON_SESSION_PASSWORD=
