--- a/.gitignore
+++ b/.gitignore
@@ -24,10 +24,10 @@ yarn-error.log*
 
 # local env files
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.local.*
+.env.development.*
+.env.test.*
+.env.production.*
 
 # turbo
 .turbo
