Restructured package dir
Move static assets to assets package

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,5 +1,5 @@
 {
   "extends": "tsconfig/nextjs.json",
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "*tsx", "../../packages/ui/types/**/*.d.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "*tsx", "../../packages/lib/types/**/*.d.ts"],
   "exclude": ["node_modules"]
 }
