--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -12,12 +12,14 @@
     "@types/react-dom": "^18.2.0",
     "eslint": "^7.32.0",
     "eslint-config-custom": "workspace:*",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "tsconfig": "workspace:*",
     "typescript": "^4.5.2"
   },
   "dependencies": {
     "next": "^13.4.3",
-    "rc-progress": "^3.4.1"
+    "rc-progress": "^3.4.1",
+    "lib": "workspace:*",
+    "assets": "workspace:*"
   }
 }
