--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,21 +6,28 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "synpress:run": "env-cmd -f ../../.env synpress run",
+    "test": "start-server-and-test 'npm run start' http://localhost:3000 'npm run synpress:run'",
+    "test:headless": "start-server-and-test 'npm run start' http://localhost:3000 'npm run synpress:run --headless'"
   },
   "dependencies": {
+    "assets": "workspace:*",
+    "lib": "workspace:*",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "ui": "workspace:*",
-    "lib": "workspace:*",
-    "assets": "workspace:*"
+    "ui": "workspace:*"
   },
   "devDependencies": {
+    "@synthetixio/synpress": "^3.7.1",
     "@types/node": "^17.0.12",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
+    "cypress": "^12.14.0",
+    "env-cmd": "^10.1.0",
     "eslint-config-custom": "workspace:*",
+    "start-server-and-test": "^2.0.0",
     "tsconfig": "workspace:*",
     "typescript": "^4.5.3"
   }
