Basic e2e test with hardhat integration

--- a/.env.sample
+++ b/.env.sample
@@ -13,3 +13,5 @@ AWS_REGION=
 AWS_DYNAMO_TABLE_NAME=
 # PRIVATE_KEY For Synpress E2E test
 PRIVATE_KEY=
+# NETWORK_NAME For Synpress E2E test. `mainnet`, `goerli`, `sepolia` and `localhost`
+NETWORK_NAME=
