--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-ethers": "^3.0.2",
     "autoprefixer": "^10.4.14",
+    "dotenv": "^16.1.4",
     "eslint": "^7.32.0",
     "eslint-config-custom": "workspace:*",
+    "hardhat": "^2.15.0",
     "postcss": "^8.4.23",
     "prettier": "^2.5.1",
     "tailwindcss": "^3.3.2",
+    "ts-node": "^10.9.1",
     "turbo": "latest"
   },
   "packageManager": "pnpm@7.15.0",
