Added e2e test for Sale contract deployment

--- a/.env.sample
+++ b/.env.sample
@@ -15,3 +15,5 @@ AWS_DYNAMO_TABLE_NAME=
 PRIVATE_KEY=
 # NETWORK_NAME For Synpress E2E test. `mainnet`, `goerli`, `sepolia` and `localhost`
 NETWORK_NAME=
+TEST_TOKEN=
+INFURA_API_TOKEN=
