Added Infura as a network provider

--- a/.env.sample
+++ b/.env.sample
@@ -3,6 +3,7 @@ NEXT_PUBLIC_SUBGRAPH_SLUG=
 NEXT_PUBLIC_SUBGRAPH_VERSION=
 NEXT_PUBLIC_CHAIN_ID=
 NEXT_PUBLIC_WALLET_CONNECT_ID=
+NEXT_PUBLIC_INFURA_API_TOKEN=
 BASIC_AUTH_USER=
 BASIC_AUTH_PASS=
 IRON_SESSION_PASSWORD=
@@ -16,4 +17,3 @@ PRIVATE_KEY=
 # NETWORK_NAME For Synpress E2E test. `mainnet`, `goerli`, `sepolia` and `localhost`
 NETWORK_NAME=
 TEST_TOKEN=
-INFURA_API_TOKEN=
