Added an env val into turbo.json

--- a/turbo.json
+++ b/turbo.json
@@ -10,6 +10,7 @@
         "NEXT_PUBLIC_SUBGRAPH_VERSION",
         "NEXT_PUBLIC_CHAIN_ID",
         "NEXT_PUBLIC_WALLET_CONNECT_ID",
+        "NEXT_PUBLIC_INFURA_API_TOKEN",
         "BASIC_AUTH_USER",
         "BASIC_AUTH_PASS",
         "IRON_SESSION_PASSWORD",
