--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ethers": "^5",
     "formik": "^2.2.9",
     "framer-motion": "^6",
+    "graphql": "^16.7.1",
     "iron-session": "^6.3.1",
     "jotai": "^2.0.4",
     "react-icons": "^4.8.0",
