--- a/turbo.json
+++ b/turbo.json
@@ -19,7 +19,8 @@
         "AWS_SECRET_ACCESS_KEY",
         "AWS_REGION",
         "AWS_DYNAMO_TABLE_NAME",
-        "NODE_ENV"
+        "NODE_ENV",
+        "NEXT_PUBLIC_VERCEL_GIT_COMMIT_SHA"
       ]
     },
     "lint": {},
