--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,7 +18,8 @@
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "ui": "workspace:*"
+    "ui": "workspace:*",
+    "viem": "^1.3.0"
   },
   "devDependencies": {
     "@synthetixio/synpress": "^3.7.1",
