--- a/turbo.json
+++ b/turbo.json
@@ -11,6 +11,8 @@
         "NEXT_PUBLIC_CHAIN_ID",
         "NEXT_PUBLIC_WALLET_CONNECT_ID",
         "NEXT_PUBLIC_INFURA_API_TOKEN",
+        "NEXT_PUBLIC_ETHERSCAN_API_KEY",
+        "NEXT_PUBLIC_ALCHEMY_API_KEY",
         "BASIC_AUTH_USER",
         "BASIC_AUTH_PASS",
         "IRON_SESSION_PASSWORD",
