- Added a note about 1% fee - Updated .env.sample

--- a/.env.sample
+++ b/.env.sample
@@ -4,6 +4,8 @@ NEXT_PUBLIC_SUBGRAPH_VERSION=
 NEXT_PUBLIC_CHAIN_ID=
 NEXT_PUBLIC_WALLET_CONNECT_ID=
 NEXT_PUBLIC_INFURA_API_TOKEN=
+NEXT_PUBLIC_ETHERSCAN_API_KEY=
+NEXT_PUBLIC_ALCHEMY_API_KEY=
 BASIC_AUTH_USER=
 BASIC_AUTH_PASS=
 IRON_SESSION_PASSWORD=
