--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,21 +18,27 @@
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "ui": "workspace:*",
-    "viem": "^1.3.0"
+    "ui": "workspace:*"
   },
   "devDependencies": {
     "@synthetixio/synpress": "^3.7.1",
-    "@types/node": "^17.0.12",
-    "@types/react": "^18.0.22",
-    "@types/react-dom": "^18.0.7",
-    "cypress": "^12.14.0",
+    "@types/node": "^20.4.5",
+    "@types/react": "^18.2.18",
+    "@types/react-dom": "^18.2.7",
+    "cypress": "^12.17.2",
     "cypress-dotenv": "^2.0.0",
-    "dotenv": "^16.1.4",
+    "dotenv": "^16.3.1",
     "env-cmd": "^10.1.0",
     "eslint-config-custom": "workspace:*",
     "start-server-and-test": "^2.0.0",
     "tsconfig": "workspace:*",
     "typescript": "^5.1.6"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not ie <= 99",
+    "not android <= 4.4.4",
+    "not dead",
+    "not op_mini all"
+  ]
 }
