--- a/package.json
+++ b/package.json
@@ -23,16 +23,16 @@
     "@apollo/client": "^3.7.17",
     "@aws-sdk/client-dynamodb": "^3.379.1",
     "@chakra-ui/icons": "^2.1.0",
-    "@chakra-ui/react": "^2.8.0",
+    "@chakra-ui/react": "2.7.1",
     "@chakra-ui/theme-tools": "^2.1.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@types/big.js": "^6.1.6",
+    "@wagmi/core": "^1.3.8",
     "abitype": "^0.9.6",
     "big.js": "^6.2.1",
     "date-fns": "^2.30.0",
     "dotenv-cli": "^7.2.1",
-    "ethers": "^5.7.2",
     "formik": "^2.4.2",
     "framer-motion": "^10.15.0",
     "graphql": "^16.7.1",
@@ -43,6 +43,14 @@
     "siwe": "^2.1.4",
     "swr": "^2.2.0",
     "use-debounce": "^9.0.4",
-    "wagmi": "^0.12.19"
-  }
+    "viem": "^1.5.0",
+    "wagmi": "^1.3.9"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not ie <= 99",
+    "not android <= 4.4.4",
+    "not dead",
+    "not op_mini all"
+  ]
 }
