--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -6,11 +6,14 @@
     "lint": "eslint \"**/*.ts*\""
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
     "eslint-config-custom": "workspace:*",
     "tsconfig": "workspace:*"
   },
-  "dependencies": {
-
-  }
+  "browserslist": [
+    ">0.2%",
+    "not ie <= 99",
+    "not android <= 4.4.4",
+    "not dead",
+    "not op_mini all"
+  ]
 }
