--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,21 +8,27 @@
     "lint": "eslint \"**/*.ts*\""
   },
   "devDependencies": {
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "eslint": "^7.32.0",
+    "@types/react": "^18.2.18",
+    "@types/react-dom": "^18.2.7",
     "eslint-config-custom": "workspace:*",
     "react": "^18.2.0",
     "tsconfig": "workspace:*",
-    "typescript": "^4.5.2"
+    "typescript": "^5.1.6"
   },
   "dependencies": {
     "assets": "workspace:*",
-    "chart.js": "^4.3.0",
+    "chart.js": "^4.3.2",
     "chartjs-adapter-moment": "^1.0.1",
     "lib": "workspace:*",
-    "next": "^13.4.3",
-    "rc-progress": "^3.4.1",
+    "next": "^13.4.12",
+    "rc-progress": "^3.4.2",
     "react-chartjs-2": "^5.2.0"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not ie <= 99",
+    "not android <= 4.4.4",
+    "not dead",
+    "not op_mini all"
+  ]
 }
