--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^16.3.1",
     "env-cmd": "^10.1.0",
     "eslint-config-custom": "workspace:*",
+    "ethers": "^6.6.7",
     "start-server-and-test": "^2.0.0",
     "tsconfig": "workspace:*",
     "typescript": "^5.1.6"
