--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -19,6 +19,7 @@
     "assets": "workspace:*",
     "chart.js": "^4.3.2",
     "chartjs-adapter-moment": "^1.0.1",
+    "ethers": "^6.6.7",
     "lib": "workspace:*",
     "next": "^13.4.12",
     "rc-progress": "^3.4.2",
