--- a/subgraph/subgraph.yaml
+++ b/subgraph/subgraph.yaml
@@ -6,21 +6,22 @@ dataSources:
     name: Factory
     network: goerli
     source:
-      address: "0x227b387ef5C46b1666aAc98577f49841ea52b34E"
+      address: "0x7A0162aEE335d8073A579aE28CDFdC16143818D8"
       abi: Factory
-      startBlock: 9476548
+      startBlock: 9503363
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
       language: wasm/assemblyscript
       entities:
+        - TemplateAuctionMap
         - Template
       abis:
         - name: Factory
           file: ./abis/Factory.json
-        - name: ERC20
-          file: ./abis/ERC20.json
       eventHandlers:
+        - event: Deployed(bytes32,address)
+          handler: handleDeployed
         - event: TemplateAdded(indexed bytes32,indexed address)
           handler: handleTemplateAdded
         - event: TemplateRemoved(indexed bytes32,indexed address)
@@ -43,6 +44,8 @@ templates:
       abis:
         - name: BaseTemplate
           file: ./abis/BaseTemplate.json
+        - name: ERC20
+          file: ./abis/ERC20.json
       eventHandlers:
         - event: Deployed(address,address,uint256,uint256,address,bytes,bytes)
           handler: handleDeployed
