Upgrading to new structure - Updated subgraph queries - Updated SaleCard component - Updated Abis

--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -15,5 +15,8 @@
     "not android <= 4.4.4",
     "not dead",
     "not op_mini all"
-  ]
+  ],
+  "dependencies": {
+    "ethers": "^6.7.0"
+  }
 }
