--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,4 @@
 NEXT_PUBLIC_FACTORY_ADDRESS=
-NEXT_PUBLIC_SUBGRAPH_SLUG=
-NEXT_PUBLIC_SUBGRAPH_VERSION=
 NEXT_PUBLIC_CHAIN_ID=
 NEXT_PUBLIC_WALLET_CONNECT_ID=
 NEXT_PUBLIC_INFURA_API_TOKEN=
@@ -14,6 +12,7 @@ AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_REGION=
 AWS_DYNAMO_TABLE_NAME=
+SUBGRAPH_ENDPOINT=
 # PRIVATE_KEY For Synpress E2E test
 PRIVATE_KEY=
 # NETWORK_NAME For Synpress E2E test. `mainnet`, `goerli`, `sepolia` and `localhost`
