Cleanup and added env var to turbo.json

--- a/turbo.json
+++ b/turbo.json
@@ -6,6 +6,8 @@
       "outputs": [".next/**", "!.next/cache/**"],
       "env": [
         "NEXT_PUBLIC_FACTORY_ADDRESS",
+        "NEXT_PUBLIC_DISTRIBUTOR_ADDRESS",
+        "NEXT_PUBLIC_YMWK_ADDRESS",
         "NEXT_PUBLIC_CHAIN_ID",
         "NEXT_PUBLIC_WALLET_CONNECT_ID",
         "NEXT_PUBLIC_INFURA_API_TOKEN",
