--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,11 +21,11 @@
     "ui": "workspace:*"
   },
   "devDependencies": {
-    "@synthetixio/synpress": "^3.7.1",
+    "@synthetixio/synpress": "3.7.2-beta.7",
     "@types/node": "^20.4.5",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
-    "cypress": "^12.17.2",
+    "cypress": "^12.17.4",
     "cypress-dotenv": "^2.0.0",
     "dotenv": "^16.3.1",
     "env-cmd": "^10.1.0",
