Basic e2e test scenario runs locally with Goerli nerwork

--- a/.env.sample
+++ b/.env.sample
@@ -16,7 +16,8 @@ AWS_REGION=
 AWS_DYNAMO_TABLE_NAME=
 SUBGRAPH_ENDPOINT=
 # PRIVATE_KEY For Synpress E2E test
-PRIVATE_KEY=
+TEST_PRIVATE_KEY=
 # NETWORK_NAME For Synpress E2E test. `mainnet`, `goerli`, `sepolia` and `localhost`
-NETWORK_NAME=
+TEST_NETWORK_NAME=
+TEST_PROVIDER_ENDPOINT=
 TEST_TOKEN=
