Testing with local chain

--- a/.env.sample
+++ b/.env.sample
@@ -15,9 +15,12 @@ AWS_SECRET_ACCESS_KEY=
 AWS_REGION=
 AWS_DYNAMO_TABLE_NAME=
 SUBGRAPH_ENDPOINT=
+
+### For e2e test --->
+# NETWORK_NAME For Synpress E2E test. `mainnet`, `goerli`, `sepolia` and `localhost`
+NETWORK_NAME=
 # PRIVATE_KEY For Synpress E2E test
 TEST_PRIVATE_KEY=
-# NETWORK_NAME For Synpress E2E test. `mainnet`, `goerli`, `sepolia` and `localhost`
-TEST_NETWORK_NAME=
 TEST_PROVIDER_ENDPOINT=
 TEST_TOKEN=
+### <---
