Run e2e on ubuntu-latest which github actions is compatible with

--- a/.github/workflows/web-e2e.yml
+++ b/.github/workflows/web-e2e.yml
@@ -3,7 +3,7 @@ on: [pull_request]
 
 jobs:
   run-synpress:
-    runs-on: node:16-buster-slim
+    runs-on: ubuntu-latest
     steps:
       - name: Update and install packages
         run: |
@@ -35,7 +35,15 @@ jobs:
           libvulkan1 \
           xdg-utils \
           procps \
+          curl \
+          gnupg \
+          gnupg2 \
+          gnupg1 \
           ca-certificates
+
+      - uses: actions/setup-node@v3
+        with:
+          node-version: "16"
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v2.2.2
@@ -43,6 +51,15 @@ jobs:
           version: 8.7.6
 
       - run: node -v
+
+      # TODO: Use foundry instead of cloning Yamawake
+      # - name: Foundry
+      #   shell: bash
+      #   run: |
+      #     curl -L https://foundry.paradigm.xyz | bash
+      #     source ~/.bashrc
+      #     export PATH=~/.foundry/bin:$PATH:
+      #     foundryup
 
       - name: Clone Yamawake repository
         run: |
@@ -68,7 +85,10 @@ jobs:
           pnpm i --frozen-lockfile
 
       - name: Install chrome
-        run: wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb && dpkg -i google-chrome-stable_current_amd64.deb
+        run: |
+          sh -c 'echo "deb http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list'
+          wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -
+          apt update && apt install google-chrome-stable
 
       - name: Create env file for Yamawake interface
         run: |
@@ -91,7 +111,14 @@ jobs:
           echo IRON_SESSION_PASSWORD=complex_password_at_least_32_characters_long >> yamawake-interface/.env
           echo IRON_SESSION_COOKIE_NAME=test_session >> yamawake-interface/.env
 
+      # TODO: Use foundry instead of cloning Yamawake
       - name: Run e2e test
+        # run: |
+        #   Xvfb :0 -screen 0 1024x768x24 -listen tcp -ac +extension RANDR &
+        #   fluxbox &
+        #   /root/.foundry/bin/anvil --fork-url ${{ secrets.FORK_URL }} &
+        #   cd yamawake-interface/apps/web
+        #   npx env-cmd -f ../../.env pnpm test:build
         run: |
           Xvfb :0 -screen 0 1024x768x24 -listen tcp -ac +extension RANDR &
           fluxbox &
