Run e2e on ubuntu-latest which github actions is compatible with

--- a/.github/workflows/web-e2e.yml
+++ b/.github/workflows/web-e2e.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - name: Update and install packages
         run: |
-          apt update -y && apt install -y --no-install-recommends \
+          sudo apt update -y && sudo apt install -y --no-install-recommends \
           git \
           wget \
           make \
