--- a/package.json
+++ b/package.json
@@ -7,44 +7,44 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.14",
+    "autoprefixer": "^10.4.16",
     "dotenv": "^16.3.1",
-    "eslint": "^8.46.0",
+    "eslint": "^8.56.0",
     "eslint-config-custom": "workspace:*",
-    "postcss": "^8.4.27",
-    "prettier": "^3.0.0",
-    "tailwindcss": "^3.3.3",
-    "ts-node": "^10.9.1",
-    "turbo": "latest"
+    "postcss": "^8.4.32",
+    "prettier": "^3.1.1",
+    "tailwindcss": "^3.3.6",
+    "ts-node": "^10.9.2",
+    "turbo": "^1.11.2"
   },
   "packageManager": "pnpm@7.15.0",
   "name": "bulk-auction-interface",
   "dependencies": {
-    "@apollo/client": "^3.7.17",
-    "@aws-sdk/client-dynamodb": "^3.379.1",
-    "@chakra-ui/icons": "^2.1.0",
-    "@chakra-ui/react": "2.7.1",
-    "@chakra-ui/theme-tools": "^2.1.0",
+    "@apollo/client": "^3.8.8",
+    "@aws-sdk/client-dynamodb": "^3.474.0",
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.2",
+    "@chakra-ui/theme-tools": "^2.1.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@types/big.js": "^6.1.6",
-    "@wagmi/core": "^1.3.8",
-    "abitype": "^0.9.6",
+    "@types/big.js": "^6.2.2",
+    "@wagmi/core": "^1.4.12",
+    "abitype": "^0.10.3",
     "big.js": "^6.2.1",
     "date-fns": "^2.30.0",
-    "dotenv-cli": "^7.2.1",
-    "formik": "^2.4.2",
-    "framer-motion": "^10.15.0",
-    "graphql": "^16.7.1",
+    "dotenv-cli": "^7.3.0",
+    "formik": "^2.4.5",
+    "framer-motion": "^10.16.16",
+    "graphql": "^16.8.1",
     "iron-session": "^6.3.1",
-    "jotai": "^2.2.3",
-    "react-icons": "^4.10.1",
-    "rsuite": "^5.37.2",
+    "jotai": "^2.6.0",
+    "react-icons": "^4.12.0",
+    "rsuite": "^5.48.0",
     "siwe": "^2.1.4",
-    "swr": "^2.2.0",
-    "use-debounce": "^9.0.4",
-    "viem": "^1.5.0",
-    "wagmi": "^1.3.9"
+    "swr": "^2.2.4",
+    "use-debounce": "^10.0.0",
+    "viem": "^1.20.0",
+    "wagmi": "^1.4.12"
   },
   "browserslist": [
     ">0.2%",
