--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -5,9 +5,9 @@
   "license": "MIT",
   "dependencies": {
     "eslint-config-next": "latest",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-react": "7.28.0",
-    "eslint-config-turbo": "latest"
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-turbo": "latest",
+    "eslint-plugin-react": "^7.33.2"
   },
   "publishConfig": {
     "access": "public"
