Fetch ETH / USD rate from Chainlink

--- a/.env.sample
+++ b/.env.sample
@@ -6,6 +6,7 @@ NEXT_PUBLIC_WALLET_CONNECT_ID=
 NEXT_PUBLIC_INFURA_API_TOKEN=
 NEXT_PUBLIC_ETHERSCAN_API_KEY=
 NEXT_PUBLIC_ALCHEMY_API_KEY=
+NEXT_PUBLIC_CHAINLINK_ETH_USD_PRICE_FEED=
 BASIC_AUTH_USER=
 BASIC_AUTH_PASS=
 IRON_SESSION_PASSWORD=
